edited user entity, built flight service and controller, enhanced dto structure, added global exception handling